selector universal y de tipo

--- a/Bere-ops/Pasatiempos_Ver2/styles.css
+++ b/Bere-ops/Pasatiempos_Ver2/styles.css
@@ -133,3 +133,11 @@ iframe {
   gap: 10px;              
   flex-wrap: wrap;         
 }
+
+#inicio * {
+  color: rgb(89, 15, 99);
+}
+
+#inicio p {
+  color: rgb(80, 75, 75);
+}
