--- a/Hugo-0699/selectores_css/estilos.css
+++ b/Hugo-0699/selectores_css/estilos.css
@@ -3,10 +3,6 @@
 .bodyprincipal {
   background-color: rgb(231, 231, 231);
 }
-.mainselector {
-  display: block;
-  padding: 20px 30px;
-}
 .headerprincipal {
   background:chocolate;
   color:cornsilk;
@@ -15,12 +11,18 @@
   border-bottom: 4px solid brown;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-#sectionselector {
+.mainselector {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 20px;
+  padding: 20px 30px;
+}
+.sectionselector {
   background:transparent;
   border-bottom: 1px solid black;
   color: black;
-  padding: 25px 0;    
+  padding: 25px 0; 
+  display: block;
 }
 #sectionselector h3 {
   font-size: 25px;
@@ -29,16 +31,10 @@
   color:black;
 }
 #sectionselector img {
-  border: 1px solid black;
-  margin: 10px auto;
-  max-width: 90%;
-  border-radius: 8px;
+  margin: 10px 0;
+  max-width: 50%;
   display: block;
 }
-
-
-
-
 .footer {
     background-color: rgb(44, 46, 48);
     color:cornsilk;
@@ -47,3 +43,27 @@
     text-align: center;
     font-size: 20px;
 }
+
+/* Contenido principal */
+/*
+section {
+    background: #5A5A85;
+    color: #fff;
+    padding: 20px;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+    transition: transform 0.2s ease-in-out;
+}
+
+section:hover {
+    transform: scale(1.02);
+    background: #7A1235;
+}
+
+section img {
+    display: block;
+    margin: 10px auto;
+    border-radius: 10px;
+    border: 2px solid #D8163A;
+} */
