--- a/Bere-ops/Pasatiempos_Ver2/styles.css
+++ b/Bere-ops/Pasatiempos_Ver2/styles.css
@@ -166,3 +166,14 @@ h3, h4 {
   letter-spacing: 0.3px;
   margin-bottom: 6px;
 }
+
+#videojuegos p {
+  color: darkslategrey;
+  font-style: italic;
+}
+
+#videojuegos section > h3 {
+  color: chocolate;
+  background: plum;
+
+}
