--- a/ernesgarcia06/pasatiemposver2/estilos.css
+++ b/ernesgarcia06/pasatiemposver2/estilos.css
@@ -24,7 +24,6 @@ body.menu{
     text-align: center;
 }
 
-
 .contenido {
     grid-area: aside;
     background: rgba(91, 80, 5, 0.323);
@@ -52,3 +51,33 @@ body.menu{
         width: 100%;
     }
 }
+
+
+/* Selector universal */
+#img1 *{
+    border: 10px double white;
+    border-radius: 25px;
+    background-color: rgba(6, 222, 222, 0.377);
+    display: inline-block;
+}
+
+/* Selector de tipo */
+#t01 h1 {
+    border-radius: 15px ;
+    margin: 15px;
+    background-color: rgba(8, 0, 255, 0.271);
+    border-color: black;
+    border: 3px;
+    border-style: solid;
+    text-align: center;
+}
+/* Selector por id */
+#v01 {
+    border: 10px double white;
+    border-radius: 25px;
+    background-color: rgba(6, 222, 222, 0.377);
+    display: inline-block;
+    padding-left: 2px;
+    padding-right: 20px;
+}
+
