--- a/ErickLTI/pasatiemposv2/pagina1.css
+++ b/ErickLTI/pasatiemposv2/pagina1.css
@@ -2,13 +2,15 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+h1 {
+    color: darkblue;
+    text-align: center;
+}
+
 body {
     background-color: lightcyan;
 }
 
-header h1 {
-    text-align: center;
-}
 
 button {
     font-size: larger;
