--- a/IlseOjeda/pasatiemposv2/estilo.css
+++ b/IlseOjeda/pasatiemposv2/estilo.css
@@ -121,12 +121,23 @@ table {
 }
 
 /* Selector de tipo */
-h2 { color: #8b5fbf; } 
-p { font-size: 1rem; color: #4a4a4a; } 
-li { list-style-type: square; color: #f28ca3; } 
+h2 { 
+    color: #8b5fbf; 
+} 
+p { 
+    font-size: 1rem; 
+    color: #4a4a4a; 
+} 
+li { 
+    list-style-type: square; 
+    color: #f28ca3; 
+}
 
 /* Selector por clase */
-.nombre { font-weight: bold; color: #f48484; } 
+.nombre { 
+    font-weight: bold; 
+    color: #f48484; 
+} 
 
 /* Selector por ID */
 #correr-info { 
@@ -137,22 +148,37 @@ li { list-style-type: square; color: #f28ca3; }
 }
 
 /* Selector de descendientes */
-div p { color: #9b5fc0; font-style: italic; } 
+div p { 
+    color: #9b5fc0; 
+    font-style: italic; 
+} 
 
 /* Selector hijos directos */
-article > section > p { background-color: #ffe1b6; padding: 5px; } 
+article > section > p { 
+    background-color: #e3e7fa; 
+    padding: 5px; 
+} 
 
 /* Selector de lista */
-ul li, ol li { color: #ff95a1; margin: 5px 0; } 
+ul li, ol li { 
+    color: #ff95a1; 
+    
+    margin: 5px 0; } 
 
 /* Selector por atributo */
 iframe[src*="youtube"] { border: 2px dashed #66b2cc; } 
 input[type="radio"] { accent-color: #f67280; } 
 input[type="checkbox"] { accent-color: #ff9f80; } 
-input[type="text"] { border: 1px solid #8b5fbf; padding: 5px; } 
+input[type="text"] { border: 1px solid #8b5fbf; padding: 5px; }
 
 /* Selector hermano adyacente */
-h2 + p { border-left: 3px solid #f48c6a; padding-left: 10px; } 
+h2 + p { 
+    border-left: 3px solid #f48c6a; 
+    padding-left: 10px; 
+} 
 
 /* Selector hermano general */
-h2 ~ p { color: #7e88c7; font-weight: bold; } 
+h2 ~ p { 
+    color: #7e88c7; 
+    font-weight: bold; 
+}
