Selector por ID y Clase

--- a/ErickLTI/pasatiemposv2/pagina1.css
+++ b/ErickLTI/pasatiemposv2/pagina1.css
@@ -7,6 +7,15 @@ h1 {
     text-align: center;
 }
 
+#mensaje {
+    color: darkblue;
+    font-style: italic;
+}
+
+.boton-nav {
+    border-color: brown;
+}
+
 body {
     background-color: lightcyan;
 }
