--- a/ErickLTI/pasatiemposv2/pagina1.css
+++ b/ErickLTI/pasatiemposv2/pagina1.css
@@ -16,6 +16,11 @@ h1 {
     border-color: brown;
 }
 
+a[target="_blank"] {
+    color: black;
+    text-decoration: none;
+}
+
 body {
     background-color: lightcyan;
 }
