Selector de descendientes

--- a/ErickLTI/pasatiemposv2/pagina2.css
+++ b/ErickLTI/pasatiemposv2/pagina2.css
@@ -5,6 +5,12 @@ body {
 li {
     font-weight: bold;
 }
+
+article h4 {
+    color: blue;
+    font-style: italic;
+}
+
 header h1{
     text-align: center;
 }
