--- a/ernesgarcia06/css/estilos.css
+++ b/ernesgarcia06/css/estilos.css
@@ -1,12 +1,12 @@
 #a16 {
     border: 5px groove gray;
-    background-color: rgb(43, 156, 255);
-    padding: 5px 15px;
-    width: 120px;
+    background-color: rgb(117, 117, 117);
+    padding: 5px 10px;
+    width: 160px;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
 }
 
 #a16 a {
-    color: yellow;
+    color: dodgerblue;
 }
