--- a/AlejandroRmzEsc/assets/css/styles.css
+++ b/AlejandroRmzEsc/assets/css/styles.css
@@ -35,6 +35,12 @@ header{
     width: 40%;
     box-shadow: -3px 13px 11px rgba(206,66,245,0.83);
     min-height: 400px;
+    padding: 3rem;
+    align-items: center;
+    justify-content: center;
+}
+.evidencia p {
+    text-align: justify;
 }
 
 .opcion {
