--- a/victoriabalderas/pasatiemposver2/estilos.css
+++ b/victoriabalderas/pasatiemposver2/estilos.css
@@ -5,8 +5,7 @@
 
 body {
     background-color: rgb(252, 231, 247);
-    margin: 0;
-    padding: 0;
+    padding: 5%;
 }
 /* Selector por tipo */
 header {
@@ -16,8 +15,9 @@ header {
     text-align: center;
 }
 
+/*Selector descendiente*/
 nav a {
-    margin: 0 10px; 
+    margin: 15px; 
     color: rgb(160, 17, 117);
 }
 
@@ -27,15 +27,16 @@ nav a {
 }
 
 main {
-    padding: 10px;
+    padding: 5%;
     flex:3;
 }
 
 aside {
     flex: 1;
     background-color: rgb(160, 17, 117);
-    padding: 10px;
     color: white;
+    padding: 10px;
+    align-content:flex-start;
 }
 
 /*Selector por atributo*/
@@ -48,7 +49,7 @@ h1 {
     background-color: rgb(160, 17, 117);
     font-style: oblique;
     font-size: 60px;
-    padding: 15px;
+    padding: 10px;
 }
 
 h2 {
