--- a/TheRafaMan06/pasatiemposver2/style2.css
+++ b/TheRafaMan06/pasatiemposver2/style2.css
@@ -138,7 +138,7 @@ main p {
     margin-top: 30px;
 }
 
-.serie-card {
+[class="serie-card"]{
     position: relative;
     height: 350px;
     border-radius: 12px;
