--- a/TheRafaMan06/pasatiemposver2/style.css
+++ b/TheRafaMan06/pasatiemposver2/style.css
@@ -129,11 +129,17 @@ main h2 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
+#p1{
+    color: #6e3730;
+}
+
 main p {
     color: #330505;
     line-height: 1.6;
     font-size: 1.1rem;
 }
+
+
 
 aside {
     grid-area: aside;
