--- a/1jecc/pasatiempos_practica3/estilos.css
+++ b/1jecc/pasatiempos_practica3/estilos.css
@@ -49,8 +49,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
     color: #ffffff;
     margin-bottom: 20px;
-    width: auto;
-    height: auto;
+    width: 1470px;
+    height: 800px;
 }
 
 .acomodo {
@@ -89,8 +89,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
     color: #000000;
     margin-bottom: 20px;
-    width: auto;
-    height: auto;
+    width: 1470px;
+    height: 800px;
 }
 
 
@@ -101,8 +101,8 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.9);
     color: #000000;
     margin-bottom: 20px;
-    width: auto;
-    height: auto;
+    width: 1470px;
+    height: 800px;
 }
 
 .imagen3{
