--- a/victoriabalderas/pasatiemposver2/estilos.css
+++ b/victoriabalderas/pasatiemposver2/estilos.css
@@ -100,3 +100,26 @@ footer {
     width: 200px;
     height: 300px;
 }
+
+/*Selector hijo directo*/
+form > input {
+  display: block;      
+  text-align: left;    
+  margin: 5px 0;
+  width: 90%; 
+}
+
+/*Selector hermano adyacente*/
+li + img {
+  border: 3px solid rgb(160, 17, 117);
+  display: block;
+  margin: 10px auto;
+  width: 200px;
+}
+
+/*Selector de hermano general*/
+section p ~ iframe {
+  border: 10px solid rgb(133, 6, 112);
+  display: block;
+  margin: 10px auto;
+}
