Insertado de selector por atributo

--- a/aLe.php27/pasatiempos_v2/estilos.css
+++ b/aLe.php27/pasatiempos_v2/estilos.css
@@ -279,3 +279,8 @@ li .aindex:hover {
     color: #333;
     font-weight: normal;
 }
+
+aside [href*="spotify"]{
+  color: #000;
+  background-color: greenyellow;
+}
