--- a/aLe.php27/pasatiempos_v2/estilos.css
+++ b/aLe.php27/pasatiempos_v2/estilos.css
@@ -284,3 +284,8 @@ aside [href*="spotify"]{
   color: #000;
   background-color: greenyellow;
 }
+
+#j1, #j2, #j3, #j4 {
+    border-bottom: 5px solid black;
+    padding: 10px;
+}
