--- a/aLe.php27/selectorescss/estilosselectores.css
+++ b/aLe.php27/selectorescss/estilosselectores.css
@@ -67,3 +67,13 @@
   display: block;
   box-shadow: 0 3px 10px rgba(0,0,0,0.25);
 }
+
+.centradoselectores {
+    text-align: center;
+    margin: 20px auto;
+    background: transparent;
+}
+
+.centradoselectores p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
