--- a/aLe.php27/pasatiempos_v2/estilos.css
+++ b/aLe.php27/pasatiempos_v2/estilos.css
@@ -306,3 +306,10 @@ aside [href*="spotify"]{
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
 }
+
+#m1 > h2 {
+    background-color: crimson;
+    color: white;
+    text-align: center;
+    border: 3px solid #000;
+}
