--- a/oswtobias06/pasatiempos2/estilos.css
+++ b/oswtobias06/pasatiempos2/estilos.css
@@ -1,22 +1,9 @@
-/*Selector universal*/
+/* Selector universal */
 * {
-    margin: 10;
+    font-family: "Century Gothic", Arial, sans-serif;
 }
 
-/* Selector de tipo*/
-body {
-    background-color: #F4FDFF; 
-    color: #05204A;
-}
-
-/* Selector descendiente */
-#p3 h1 {
-    background-color: #054a3e; 
-    color: #F4FDFF;
-    text-align: center;
-    padding: 20px;
-}
-
+/* Selector de tipo */
 h1 {
     background-color: #05204A; 
     color: #F4FDFF;
@@ -25,21 +12,13 @@ h1 {
 }
 
 /* Selector por ID */
-#Deportes {
-    color: white;
-    background-color: #054a3e;
+#form {
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
 }
 
-h3 {
-    color: white;
-    background-color: #05204A;
-}
-
-address {
-    border: 5px ridge #6F8695;
-}
-
-
+/* Selector por clase */
 .parraf {
     color: black;
     background-color: #F4FDFF;
@@ -47,44 +26,7 @@ address {
     border: 1px solid #6F8695;
     border-radius: 10px;
     width: 1000px;
-    display: inline-block;
-}
-
-/* Selector por hijo directo */
-#ind .parraf > p {
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-#ind .parraf + p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-
-
-
-
-#ind nav {
-    background-color: #F4FDFF;
-    padding: 15px;
-    border: 1px solid #6F8695;
-    border-radius: 10px;
-    padding: 10px;
-    width: 700px;
-}
-
-aside {
-    grid-area: aside;
-    background-color: #05204A;
-    color: #F4FDFF;
-    padding: 15px;
-    border: 1px solid #6F8695;
-    border-radius: 10px;
-    padding: 10px;
-    width: 150px;
-    position: absolute;
-    right: 90px;
-    top: 150px; 
+    margin-bottom: 10px;
 }
 
 /* Selector por atributo */
@@ -92,15 +34,72 @@ aside {
     width: 500px;
 }
 
-form {
-    width: 200px;
+/* Selector de lista */
+address, aside {
+    border: 5px ridge #6F8695;
+    text-align: justify;
+    box-shadow: 8px 8px 8px #5f99c0;
 }
 
-/* Selector por clase */
-.back {
+/* Selector por descendiente */
+.back a {
     border: 1px solid #05204A;
     background-color: #05204A;
     color: #F4FDFF;
     border-radius: 20px;
     padding: 10px;
+    text-decoration: none;
+}
+
+/* Selector hijos directos */
+main > h3 {
+    color: white;
+    background-color: #5f99c0;
+    padding: 10px;
+}
+
+/* Selector por hermano adyacente */
+#p2 .parraf p + img {
+    margin-bottom: 10px;
+    box-shadow: 8px 8px 8px #5f99c0;
+}
+
+/* Selector por hermano general */
+#p1 .parraf p ~ iframe {
+    margin-bottom: 10px;
+    box-shadow: 8px 8px 8px #5f99c0;
+}
+
+body {
+    background-color: #F4FDFF; 
+    color: #05204A;
+}
+
+img {
+    width: 300px;
+    margin-bottom: 10px;
+    box-shadow: 8px 8px 8px #5f99c0;
+}
+
+nav {
+    background-color: #F4FDFF;
+    padding: 15px;
+    border: 1px solid #6F8695;
+    border-radius: 10px;
+    padding: 10px;
+    width: 700px;
+    display: flex;
+    justify-content: space-around;
+}
+
+aside {
+    grid-area: aside;
+    background-color: #05204A;
+    color: #F4FDFF;
+    padding: 15px;
+    padding: 10px;
+    width: 150px;
+    position: absolute;
+    right: 90px;
+    top: 150px; 
 }
