--- a/aLe.php27/selectorescss/estilosselectores.css
+++ b/aLe.php27/selectorescss/estilosselectores.css
@@ -7,17 +7,19 @@
 }
 
 .bodyselectores {
-    background-color: #1B131A;
-    color: #F4F4F4;
+    background-color: #1A1A19;
+    color: #F6FCDF;
     line-height: 1.6;
 }
+
 .headerselectores {
-    background: linear-gradient(90deg, #7A1235, #D8163A);
-            color: white;
-            text-align: center;
-            padding: 20px;
-            border-bottom: 4px solid #800B10;
+    background: linear-gradient(90deg, #31511E, #859F3D);
+    color: #F6FCDF;
+    text-align: center;
+    padding: 20px;
+    border-bottom: 4px solid #31511E;
 }
+
 .mainselectores {
     display: block;
     padding: 20px 30px;
@@ -25,9 +27,9 @@
 
 #s505 {
     background: transparent;
-    color: #f5f5f5;
+    color: #F6FCDF;
     padding: 25px 0;
-    border-bottom: 1px solid rgba(255,255,255,0.1);
+    border-bottom: 1px solid rgba(246,252,223,0.2);
 }
 
 #s505:last-child {
@@ -36,36 +38,39 @@
 
 #s505 h3 {
     margin-bottom: 15px;
-    color: #FFDCE0;
+    color: #F6FCDF;
 }
 
 #s505 img {
     display: block;
     margin: 10px auto;
     border-radius: 8px;
-    border: 1px solid #D8163A;
+    border: 1px solid #859F3D;
     max-width: 90%;
 }
+
 .asideselectores {
-    background: #8e0726;
+    background: #859F3D;
+    color: black;
     padding: 15px;
     margin: 20px;
     border-radius: 8px;
 }
+
 .footerselectores {
-    background: #222;
-    color: #fff;
+    background: #31511E;
+    color: #F6FCDF;
     text-align: center;
     padding: 10px;
     margin-top: 20px;
 }
 
 .img-asideselectores {
-  margin-top: 10px;
-  max-width: 200px;
-  border-radius: 15px;
-  display: block;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.25);
+    margin-top: 10px;
+    max-width: 200px;
+    border-radius: 15px;
+    display: block;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.25);
 }
 
 .centradoselectores {
