--- a/luca384/styles.css
+++ b/luca384/styles.css
@@ -1,4 +1,5 @@
 body {
+  text-align: center;
   background-color: rgb(230, 246, 250); 
   font-family: Verdana, Helvetica, sans-serif;
   padding: 15px;
