--- a/Hugo-0699/pasatiemposmod/estilos.css
+++ b/Hugo-0699/pasatiemposmod/estilos.css
@@ -1,27 +1,27 @@
 /* Pagina principal */
 .bodyprincipal {
+  background-image: url(imagenes/nuevo-fondo.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 	margin: 0;
-    padding: 0;
-    background-image: url(imagenes/nuevo-fondo.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+  padding: 0;
 }
 .headerprincipal {
   background: brown;
-  color:cornsilk;
   border: 4px double black;
+  color:cornsilk;
 }
 .ulprincipal {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-background-color:burlywood;
+  background-color:burlywood;
+  list-style-type: none;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 .liprincipal {
-float: left;
+  float: left;
 }   
 .aprincipal {
   display: block;
@@ -31,19 +31,20 @@ float: left;
   text-decoration: none;
 }
 .aprincipal:hover {
-    background-color:chocolate;
+  background-color:chocolate;
 }
 .imgprincipal {
-border: 3px solid black;
-box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
+  border: 3px solid black;
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
 }
 /* Bloque footer */
 .copyright {
-    background-color: rgb(44, 46, 48);
-    color: whitesmoke;
-    text-align: center;
-    padding: 5px;
-    font-size: 20px;
+  background-color: rgb(44, 46, 48);
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: whitesmoke;
+  font-size: 15px;
+  padding: 5px;
 }
 
 
@@ -54,9 +55,15 @@ box-shadow: 5px 5px 15px rgba(0,0,0,0.5);
   border: 4px double black;
 }
 .centrarimg {
-    display: flex;
-    align-content: center;
-    margin-left: 80px;
+  display: flex;
+  align-content: center;    
+  margin-left: 80px;
+}
+#bordecolor > h3 {
+  background-color: goldenrod;
+  border-radius: 10px;
+  border-bottom: 5px;
+  padding: 10px;
 }
 
 
