--- a/gfuelinme/pasatiemposv2/estilos-pv2.css
+++ b/gfuelinme/pasatiemposv2/estilos-pv2.css
@@ -1,5 +1,8 @@
-body {
+* {
     font-family: Arial, sans-serif;
+}
+
+body {
     background-color: rgb(232, 232, 232);
     margin: 0;
     padding: 0;
@@ -12,8 +15,9 @@ header {
     text-align: center;
 }
 
-h1 {
+header > h1 {
     color: white;
+    font-size: 25px;
 }
 
 nav {
@@ -42,11 +46,6 @@ nav a {
   text-decoration: none;
 }
 
-ul a {
-    font-size: 20px;
-}
-
-
 section {
     background-color: white;
     border-radius: 10px;
@@ -57,29 +56,41 @@ section {
 h2 {
     padding: 10px;
     font-weight: bold;
+    font-size: 20px;
 }
 
 p {
     padding: 13px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
-img {
+img, iframe, video {
     margin: 10px;
     padding: 10px;
 }
 
-iframe {
-    margin: 10px;
-    padding: 10px;
+a[href*="https://"] {
+    color: black;
+    font-size: 15px;
 }
 
-video {
-    margin: 10px;
-    padding: 10px;
+#datosFutbol h2 ~ p {
+    font-style: italic;
 }
 
-table {
+#datosCine h2:nth-of-type(2) + p {
+    font-style: italic;
+}
+
+#tablaMusica {
+    width: 50%;
+    height: 90px;
+    margin: 15px;
+    padding: 10px;
+    border-collapse: collapse;
+}
+
+#tablaCine {
     width: 30%;
     height: 90px;
     margin: 15px;
@@ -94,7 +105,7 @@ footer {
     text-align: center;
 }
 
-.p-footer {
+.textoFooter {
     color: white;
     text-align: center;
 }
