--- a/aLe.php27/estilosindex.css
+++ b/aLe.php27/estilosindex.css
@@ -53,6 +53,14 @@
   color: #FFDCE0;
 }
 
+#e1 img {
+    display: block;
+    margin: 10px auto;
+    border-radius: 8px;
+    border: 1px solid #A01038;
+    max-width: 90%;
+}
+
 .asideevidencias {
   background: #8e0726;
   padding: 15px;
