--- a/ErickLTI/pasatiemposv2/pagina3.css
+++ b/ErickLTI/pasatiemposv2/pagina3.css
@@ -1,3 +1,9 @@
+header > h2 {
+    border: 1px solid black;
+    border-radius: 2px;
+    text-align: center;
+}
+
 body {
     background-color: lightcyan;
 }
