Selector de hermano adyacente

--- a/ErickLTI/pasatiemposv2/pagina3.css
+++ b/ErickLTI/pasatiemposv2/pagina3.css
@@ -4,6 +4,10 @@ header > h2 {
     text-align: center;
 }
 
+video + h4 {
+    text-align: center;    
+}
+
 body {
     background-color: lightcyan;
 }
