Selector de hermano general

--- a/ErickLTI/pasatiemposv2/pagina3.css
+++ b/ErickLTI/pasatiemposv2/pagina3.css
@@ -8,6 +8,10 @@ video + h4 {
     text-align: center;    
 }
 
+h4 ~ form {
+    font-weight: bold;
+}
+
 body {
     background-color: lightcyan;
 }
