Codigo del selector hijos directos

--- a/atchz/pasatiempos2/estilos1.css
+++ b/atchz/pasatiempos2/estilos1.css
@@ -54,3 +54,8 @@ header nav li a {
     align-content: center;
     color: white;
 }
+
+article > iframe {
+    border-radius: 12px;
+    box-shadow: 10px 10px 20px rgb(76, 136, 76);
+}
