--- a/TheRafaMan06/pasatiemposver2/style2.css
+++ b/TheRafaMan06/pasatiemposver2/style2.css
@@ -124,7 +124,7 @@ main h2 {
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
 }
 
-main p {
+main > p {
     color: #260000;
     line-height: 1.6;
     font-size: 1.1rem;
