--- a/CarlosPortalesM/pasatiemposver2/style.css
+++ b/CarlosPortalesM/pasatiemposver2/style.css
@@ -1,21 +1,65 @@
-body {
-    background: linear-gradient(135deg, #fff3e6, #ffe9d6);
-    margin: 0;
-    padding: 0;
-    color: #141519;
+* {
+    box-sizing: border-box;
+    font-family: "roboto", sans-serif;
+    font-size: 18px;
 }
 
-header {
+h1 {
     background-color: #F47521;
     color: white;
     text-align: center;
     padding: 20px 10px;
     border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    border-bottom-right-radius: 20px; 
 }
 
-header h1, header h2 {
-    margin: 5px 0;
+#eleccion {
+    border: 4px solid #6e0ec8;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.cancion {
+    background-color: #ffeb3b;
+    padding: 5px;
+    border-radius: 4px;
+}
+
+a[href] {
+    cursor: pointer;
+}
+
+h2, p {
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: 20px;
+}
+
+nav a {
+    text-transform: uppercase;
+    font-size: 15px;
+}
+
+main > p {
+    color: #b00b0b;
+    font-size: 17px;
+}
+
+h2 + p {
+    font-weight: bold;
+    color: #5015af;
+    font-size: 18px;
+}
+
+h2 ~ p {
+  border: black solid 3px ;
+}
+
+body {
+    background: linear-gradient(135deg, #fff3e6, #ffe9d6);
+    margin: 0;
+    padding: 0;
+    color: #141519;
 }
 
 nav {
