Selector de descendientes

--- a/FernandaGomezG/practica3/estilos.css
+++ b/FernandaGomezG/practica3/estilos.css
@@ -96,3 +96,8 @@ h1, aside {
     text-shadow: 5px 5px 5px black;
 
 }
+
+/*Selector de descendientes*/
+article section li {
+    font-style: italic;
+}
