--- a/ErickLTI/p5/selectores.css
+++ b/ErickLTI/p5/selectores.css
@@ -1,10 +1,11 @@
 body {
     background-color: lightcyan;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-header h2 {
+header h1 {
     text-align: center;
-    color: white;
+    color: lightcyan;
     background-color: black;
 }
 
@@ -16,6 +17,7 @@ section {
 }
 
 img {
-    border: 3px solid black;
-    
+    border: 2px solid black;
+    display: block;
+    margin: auto;
 }
