--- a/AlejandroRmzEsc/assets/css/styles.css
+++ b/AlejandroRmzEsc/assets/css/styles.css
@@ -39,6 +39,10 @@ header{
     align-items: center;
     justify-content: center;
 }
+.evidencia:hover{
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+}
 .evidencia p {
     text-align: justify;
 }
