--- a/Hugo-0699/estilos.css
+++ b/Hugo-0699/estilos.css
@@ -1,30 +1,44 @@
 /* Hoja de estilos para el apartado de las actividades */
-.bodyprincipal1 {
-    background-color:rgb(0, 78, 129);
-}
-
-.Hecho-por {
-    background-color: rgb(44, 46, 48);
-    color: whitesmoke;
+* {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 5px;
-    font-size: 17px;
 }
-
-h1 {
+.fondo {
+    background-color: #2A1A1F;
+}
+.titulo-principal {
+    background:rgb(255, 209, 124);
+    border-bottom: 4px solid rgb(131, 86, 34);
+    color: rgb(82, 27, 27);
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    background-color: burlywood;
-    padding: 20px 20px;
+    padding: 10px;
 }
+.cuerpo {
+    padding: 0px 50px 30px;
+}
+#no-evidencia {
+    color: rgb(82, 27, 27);
+    background: rgb(196, 149, 63);
+    padding: 0px 70px 5px;
 
+}
 h2 {
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif ;
     font-size: 27px;
+    padding: 10px 0px 0px;
 }
 
 section {
-    background-color: beige;
+    background-color: #764134;
     border-radius: 10px;
+    color: white;
+    padding: 0px 70px 5px;
+}
+
+.datos-personales {
+    background: rgb(44, 46, 48);
+    border-bottom: 4px solid rgb(155, 106, 42);
+    color: whitesmoke;
+    padding: 5px;
+    font-size: 17px;
+    padding: 1px 70px 5px;
 }
